--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //UI
+    implementation "com.android.support:recyclerview-v7:28.0.0"
+
+    //API
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.7.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    //IMG
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+
 }
