--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug{
+            buildConfigField("String", "BASE_URL", '"https://api.github.com"')
+        }
         release {
+            buildConfigField("String", "BASE_URL", '"https://api.github.com"')
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
